[package]
name = "joplin-reader"
description = "Library which reads a Joplin data folder and provides an interface to the items."
version = "0.2.1"
authors = ["Teraku <teraku@teraku.de>"]
edition = "2018"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/Milchdealer/joplin-reader"
repository = "https://github.com/Milchdealer/joplin-reader"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sjcl = "0.1"
hex = "0.4.3"
chrono = "0.4"
percent-encoding = "2.1.0"
serde = { version = "1.0.124", features = ["derive"] }
serde_json = "1.0.59"
thiserror = "1.0"
regex = "1.4.5"
